--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,11 @@ table {
 .menu-table {
     max-height: 350px !important;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0;
+}
