20250819 요청사항 완료

--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,15 @@ table {
     max-height: 350px !important;
 }
 
+
+/* Chrome, Safari, Edge, Opera */
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
     margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
 }
